# ainativelang-claudecode

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-ainl.txt  requirements.txt
.claude-plugin/: plugin.json
docs/: AINL_CONCEPTS.md  AINL_LANGUAGE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  USER_GUIDE_AINL.md
hooks/: ainl_detection.py  ainl_validator.py  hooks.json  post_compact.py  post_tool_use.py  pre_compact.py  stop.py  user_prompt_submit.py
hooks/shared/: __init__.py  logger.py  project_id.py
mcp_server/: __init__.py  ainl_patterns.py  ainl_tools.py  extractor.py  graph_store.py  node_types.py  persona_engine.py  retrieval.py  schema.sql  server.py
profiles/: test_integration.json  test_project.json  test_project_2.json  test_project_quality.json  test_smoke.json
templates/ainl/: README.md  api_endpoint.ainl  blockchain_monitor.ainl  data_pipeline.ainl  llm_workflow.ainl  monitor_workflow.ainl  multi_step_automation.ainl
tests/: __init__.py  test_ainl_detection.py  test_ainl_patterns.py  test_ainl_tools.py
